modified button scroll to avoid jumping weirdness. changed eevent pos to use days

--- a/public/index.css
+++ b/public/index.css
@@ -160,6 +160,17 @@ div#loadingSplash {
     overflow-x: auto;
 }
 
+#scrollmarker {
+    position: absolute;
+    top: 50%;
+    border: 3px solid red;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+}
+
 #markers {
     position: absolute;
     top:0;
